--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </a-entity>
     </a-scene>
 
-    <a-scene mindar-image="imageTargetSrc: a3.mind;" color-space="sRGB" height="0.5" width="0.5" renderer="colorManagement: true; physicallyCorrectLights: true" vr-mode-ui="enabled: false" light="defaultLightsEnabled: false" device-orientation-permission-ui="enabled: false">
+    <a-scene mindar-image="imageTargetSrc: targets (5).mind;" color-space="sRGB" height="0.5" width="0.5" renderer="colorManagement: true; physicallyCorrectLights: true" vr-mode-ui="enabled: false" light="defaultLightsEnabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
         <img id="card3" src="b3.jpg" />
       </a-assets>
