--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
         <a-plane src="#card2" position="0 0 0" rotation="0 0 0"></a-plane>
         <!-- <a-gltf-model rotation="0 0 0 " position="0 0 0.1" scale="0.005 0.005 0.005" src="#avatarModel" animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate"> -->
       </a-entity>
+      
     </a-scene>
 
     <a-scene mindar-image="imageTargetSrc: targets (5).mind;" color-space="sRGB" height="0.5" width="0.5" renderer="colorManagement: true; physicallyCorrectLights: true" vr-mode-ui="enabled: false" light="defaultLightsEnabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
-        <img id="card3" src="b3.jpg" />
+        <img id="card3" src="b3.png.png" />
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
