--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
       
     </a-scene>
 
-    <a-scene mindar-image="imageTargetSrc: targets (7).mind;" color-space="sRGB" height="0.5" width="0.5" renderer="colorManagement: true; physicallyCorrectLights: true" vr-mode-ui="enabled: false" light="defaultLightsEnabled: false" device-orientation-permission-ui="enabled: false">
+    <a-scene mindar-image="imageTargetSrc: z1.mind;" color-space="sRGB" height="0.5" width="0.5" renderer="colorManagement: true; physicallyCorrectLights: true" vr-mode-ui="enabled: false" light="defaultLightsEnabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
-        <img id="card3" src="完稿.眼鏡.png" />
+        <img id="card3" src="z1.png" />
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
