--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
-      <a-entity mindar-image-target="targetIndex: 0" light="type: ambient; intensity: 1;">
-        <a-plane src="#card3" position="0 0 0" rotation="0 0 0"></a-plane>
+      <a-entity mindar-image-target="targetIndex: 0" light="type: ambient; intensity: 1;"> 
+      <a-entity light="type: point; intensity: 1.5; distance: 10;" position="0 2 2"></a-entity>
+        <a-plane src="#card3"  width="2.0" height="2.0"position="0 0 0" rotation="0 0 0"></a-plane>
       </a-entity>
     </a-scene>
 
