--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
       
     </a-scene>
 
-    <a-scene mindar-image="imageTargetSrc: z1.mind;" color-space="sRGB" height="3.0" width="3.0" renderer="colorManagement: true; physicallyCorrectLights: true" vr-mode-ui="enabled: false" light="defaultLightsEnabled: false" device-orientation-permission-ui="enabled: false">
+    <a-scene mindar-image="imageTargetSrc: z1.mind;" color-space="sRGB" height="0.8" width="0.8" renderer="colorManagement: true; physicallyCorrectLights: true" vr-mode-ui="enabled: false" light="defaultLightsEnabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
         <img id="card3" src="z1.png" />
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
       <a-entity mindar-image-target="targetIndex: 0" light="type: ambient; intensity: 1;"> 
-        <a-plane src="#card3" position="0 0 0" rotation="0 0 0"></a-plane>
+        <a-plane src="#card3" position="0 0 0" rotation="0 0 0" scale="1.0 1.5 1.0"></a-plane>
       </a-entity>
     </a-scene>
 
