--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
 
     <a-scene mindar-image="imageTargetSrc: z1.mind;" color-space="sRGB" height="1.0" width="1.0" renderer="colorManagement: true; physicallyCorrectLights: true" vr-mode-ui="enabled: false" light="defaultLightsEnabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
-        <img id="card3" src="z1.png" />
+        <img id="card3" src="zz1.png" />
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
       <a-entity mindar-image-target="targetIndex: 0" light="type: ambient; intensity: 1;"> 
-        <a-plane src="#card3" position="0 0 0" rotation="0 0 0"></a-plane>
+        <a-plane src="#card3" position="0.5 0 0" rotation="0 0 0"></a-plane>
       </a-entity>
     </a-scene>
 
