--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
       <a-entity mindar-image-target="targetIndex: 0" light="type: ambient; intensity: 1;"> 
-        <a-plane src="#card3" position="0 0 0" rotation="0 0 0"></a-plane>
+        <a-plane src="#card3" position="0 0 0" rotation="0 0 0" alpha-test="1" opacity="1"></a-plane>
       </a-entity>
     </a-scene>
 
