--- a/index.html
+++ b/index.html
@@ -36,7 +36,51 @@
 
     <a-scene mindar-image="imageTargetSrc: z1.mind;" color-space="sRGB" height="1.2" width="0.7" renderer="colorManagement: true; physicallyCorrectLights: true" vr-mode-ui="enabled: false" light="defaultLightsEnabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
-        <img id="card3" src="zz3.png" />
+        <img id="card3" src="z1.png" />
+      </a-assets>
+
+      <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+      <a-entity mindar-image-target="targetIndex: 0" light="type: ambient; intensity: 1;"> 
+        <a-plane src="#card3" position="0 0 0" rotation="0 0 0" alpha-test="1" opacity="1"></a-plane>
+      </a-entity>
+    </a-scene>
+
+       <a-scene mindar-image="imageTargetSrc: z2.mind;" color-space="sRGB" height="1.2" width="0.7" renderer="colorManagement: true; physicallyCorrectLights: true" vr-mode-ui="enabled: false" light="defaultLightsEnabled: false" device-orientation-permission-ui="enabled: false">
+      <a-assets>
+        <img id="card3" src="z2.png" />
+      </a-assets>
+
+      <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+      <a-entity mindar-image-target="targetIndex: 0" light="type: ambient; intensity: 1;"> 
+        <a-plane src="#card3" position="0 0 0" rotation="0 0 0" alpha-test="1" opacity="1"></a-plane>
+      </a-entity>
+    </a-scene>
+
+       <a-scene mindar-image="imageTargetSrc: z3.mind;" color-space="sRGB" height="1.2" width="0.7" renderer="colorManagement: true; physicallyCorrectLights: true" vr-mode-ui="enabled: false" light="defaultLightsEnabled: false" device-orientation-permission-ui="enabled: false">
+      <a-assets>
+        <img id="card3" src="z3.png" />
+      </a-assets>
+
+      <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+      <a-entity mindar-image-target="targetIndex: 0" light="type: ambient; intensity: 1;"> 
+        <a-plane src="#card3" position="0 0 0" rotation="0 0 0" alpha-test="1" opacity="1"></a-plane>
+      </a-entity>
+    </a-scene>
+
+       <a-scene mindar-image="imageTargetSrc: z4.mind;" color-space="sRGB" height="1.2" width="0.7" renderer="colorManagement: true; physicallyCorrectLights: true" vr-mode-ui="enabled: false" light="defaultLightsEnabled: false" device-orientation-permission-ui="enabled: false">
+      <a-assets>
+        <img id="card3" src="z4.png" />
+      </a-assets>
+
+      <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+      <a-entity mindar-image-target="targetIndex: 0" light="type: ambient; intensity: 1;"> 
+        <a-plane src="#card3" position="0 0 0" rotation="0 0 0" alpha-test="1" opacity="1"></a-plane>
+      </a-entity>
+    </a-scene>
+
+       <a-scene mindar-image="imageTargetSrc: z5.mind;" color-space="sRGB" height="1.2" width="0.7" renderer="colorManagement: true; physicallyCorrectLights: true" vr-mode-ui="enabled: false" light="defaultLightsEnabled: false" device-orientation-permission-ui="enabled: false">
+      <a-assets>
+        <img id="card3" src="z5.png" />
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
