--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
       <a-entity mindar-image-target="targetIndex: 0" light="type: ambient; intensity: 1;"> 
-        <a-plane src="#card3" position="0 0 0" rotation="0 0 0" scale="1.5 1.5 1.0" alpha-test="1" opacity="1"></a-plane>
+        <a-plane src="#card3" position="0 0 0" rotation="0 0 0" scale="1.5 1.5 1.5" ></a-plane>
       </a-entity>
     </a-scene>
 
@@ -58,34 +58,34 @@
 
        <a-scene mindar-image="imageTargetSrc: z3.mind;" color-space="sRGB" height="1.2" width="0.7" renderer="colorManagement: true; physicallyCorrectLights: true" vr-mode-ui="enabled: false" light="defaultLightsEnabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
-        <img id="card3" src="z3.png" />
+        <img id="card4" src="z3.png" />
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
       <a-entity mindar-image-target="targetIndex: 0" light="type: ambient; intensity: 1;"> 
-        <a-plane src="#card3" position="0 0 0" rotation="0 0 0" alpha-test="1" opacity="1"></a-plane>
+        <a-plane src="#card4" position="0 0 0" rotation="0 0 0" alpha-test="1" opacity="1"></a-plane>
       </a-entity>
     </a-scene>
 
        <a-scene mindar-image="imageTargetSrc: z4.mind;" color-space="sRGB" height="1.2" width="0.7" renderer="colorManagement: true; physicallyCorrectLights: true" vr-mode-ui="enabled: false" light="defaultLightsEnabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
-        <img id="card3" src="z4.png" />
+        <img id="card5" src="z4.png" />
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
       <a-entity mindar-image-target="targetIndex: 0" light="type: ambient; intensity: 1;"> 
-        <a-plane src="#card3" position="0 0 0" rotation="0 0 0" alpha-test="1" opacity="1"></a-plane>
+        <a-plane src="#card5" position="0 0 0" rotation="0 0 0" alpha-test="1" opacity="1"></a-plane>
       </a-entity>
     </a-scene>
 
        <a-scene mindar-image="imageTargetSrc: z5.mind;" color-space="sRGB" height="1.2" width="0.7" renderer="colorManagement: true; physicallyCorrectLights: true" vr-mode-ui="enabled: false" light="defaultLightsEnabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
-        <img id="card3" src="z5.png" />
+        <img id="card6" src="z5.png" />
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
       <a-entity mindar-image-target="targetIndex: 0" light="type: ambient; intensity: 1;"> 
-        <a-plane src="#card3" position="0 0 0" rotation="0 0 0" alpha-test="1" opacity="1"></a-plane>
+        <a-plane src="#card6" position="0 0 0" rotation="0 0 0" alpha-test="1" opacity="1"></a-plane>
       </a-entity>
     </a-scene>
 
