--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
 
     <a-scene mindar-image="imageTargetSrc: z1.mind;" color-space="sRGB" height="0.5" width="0.5" renderer="colorManagement: true; physicallyCorrectLights: true" vr-mode-ui="enabled: false" light="defaultLightsEnabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
-        <img id="card3" src="zz3.png" />
+        <img id="card3" src="1.png" />
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
       <a-entity mindar-image-target="targetIndex: 0" light="type: ambient; intensity: 1;"> 
-        <a-plane src="#card3" position="0 0 0" rotation="0 0 0" scale="1.5 3.0 1.5" alpha-test="1" opacity="1"></a-plane>
+        <a-plane src="#card3" position="0 0 0" rotation="0 0 0" scale="2.0 2.0 2.0" alpha-test="1" opacity="1"></a-plane>
       </a-entity>
   
     </a-scene>
 
     <a-scene mindar-image="imageTargetSrc: z2.mind;" color-space="sRGB" height="0.5" width="0.5" renderer="colorManagement: true; physicallyCorrectLights: true" vr-mode-ui="enabled: false" light="defaultLightsEnabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
-        <img id="card7" src="z2.png" />
+        <img id="card7" src="2.png" />
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
