--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
       <a-entity mindar-image-target="targetIndex: 0" light="type: ambient; intensity: 1;"> 
-        <a-plane src="#card3" position="0 0 0" rotation="0 0 0" alpha-test="1" opacity="1"></a-plane>
+        <a-plane src="#card3" position="0 0 0" rotation="0 0 0" scale="3 3 3" alpha-test="1" opacity="1"></a-plane>
       </a-entity>
   
     </a-scene>
@@ -53,7 +53,7 @@
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
       <a-entity mindar-image-target="targetIndex: 0" light="type: ambient; intensity: 1;"> 
-        <a-plane src="#card7" position="0 0 0" rotation="0 0 0" alpha-test="1" opacity="1"></a-plane>
+        <a-plane src="#card7" position="0 0 0" rotation="0 0 0" scale="3 3 3" alpha-test="1" opacity="1"></a-plane>
       </a-entity>
   
     </a-scene>
@@ -72,23 +72,23 @@
 
     <a-scene mindar-image="imageTargetSrc: z4.mind;" color-space="sRGB" height="0.5" width="0.5" renderer="colorManagement: true; physicallyCorrectLights: true" vr-mode-ui="enabled: false" light="defaultLightsEnabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
-        <img id="card5" src="4.png" />
+        <img id="card5" src="44.png" />
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
       <a-entity mindar-image-target="targetIndex: 0" light="type: ambient; intensity: 1;"> 
-        <a-plane src="#card5" position="0 0 0" rotation="0 0 0" alpha-test="1" opacity="1"></a-plane>
+        <a-plane src="#card5" position="0 0 0" rotation="0 0 0" scale="3 3 3" alpha-test="1" opacity="1"></a-plane>
       </a-entity>
     </a-scene>
 
        <a-scene mindar-image="imageTargetSrc: z5.mind;" color-space="sRGB" height="0.5" width="0.5" renderer="colorManagement: true; physicallyCorrectLights: true" vr-mode-ui="enabled: false" light="defaultLightsEnabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
-        <img id="card6" src="5.png" />
+        <img id="card6" src="55.png" />
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
       <a-entity mindar-image-target="targetIndex: 0" light="type: ambient; intensity: 1;"> 
-        <a-plane src="#card6" position="0 0 0" rotation="0 0 0" alpha-test="1" opacity="1"></a-plane>
+        <a-plane src="#card6" position="0 0 0" rotation="0 0 0" scale="3 3 3" alpha-test="1" opacity="1"></a-plane>
       </a-entity>
     </a-scene>
 
