--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
       <a-entity mindar-image-target="targetIndex: 0" light="type: ambient; intensity: 1;"> 
-        <a-plane src="#card10" position="0 0 0" rotation="0 0 0" scale="3.5 3 3"></a-plane>
+        <!--a-plane src="#card10" position="0 0 0" rotation="0 0 0" scale="3.5 3 3"></a-plane>-->
         <a-text id="subtitleText" value="你好" position="0 -0.7 0" align="center" width="2" color="white"></a-text>
       </a-entity>
     </a-scene>
