--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
      <a-scene mindar-image="imageTargetSrc: end1.mind;" color-space="sRGB" height="1.2" width="0.5" renderer="colorManagement: true; physicallyCorrectLights: true" vr-mode-ui="enabled: false" light="defaultLightsEnabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
-        <img id="card10" src="紀念品.png" />
+        <img id="card10" src="end1.png" />
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
@@ -103,5 +103,50 @@
       </a-entity>
     </a-scene>
 
+    <a-scene mindar-image="imageTargetSrc: end2.mind;" color-space="sRGB" height="0.5" width="0.5" renderer="colorManagement: true; physicallyCorrectLights: true" vr-mode-ui="enabled: false" light="defaultLightsEnabled: false" device-orientation-permission-ui="enabled: false">
+      <a-assets>
+        <img id="card11" src="end2.png" />
+      </a-assets>
+
+      <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+      <a-entity mindar-image-target="targetIndex: 0" light="type: ambient; intensity: 1;"> 
+        <a-plane src="#card11" position="0 0 0" rotation="0 0 0" scale="3 3 3" alpha-test="1" opacity="1"></a-plane>
+      </a-entity>
+    </a-scene>
+
+    <a-scene mindar-image="imageTargetSrc: end3.mind;" color-space="sRGB" height="0.5" width="0.5" renderer="colorManagement: true; physicallyCorrectLights: true" vr-mode-ui="enabled: false" light="defaultLightsEnabled: false" device-orientation-permission-ui="enabled: false">
+      <a-assets>
+        <img id="card12" src="end3.png" />
+      </a-assets>
+
+      <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+      <a-entity mindar-image-target="targetIndex: 0" light="type: ambient; intensity: 1;"> 
+        <a-plane src="#card12" position="0 0 0" rotation="0 0 0" scale="3 3 3" alpha-test="1" opacity="1"></a-plane>
+      </a-entity>
+    </a-scene>
+
+    <a-scene mindar-image="imageTargetSrc: end4.mind;" color-space="sRGB" height="0.5" width="0.5" renderer="colorManagement: true; physicallyCorrectLights: true" vr-mode-ui="enabled: false" light="defaultLightsEnabled: false" device-orientation-permission-ui="enabled: false">
+      <a-assets>
+        <img id="card13" src="end4.png" />
+      </a-assets>
+
+      <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+      <a-entity mindar-image-target="targetIndex: 0" light="type: ambient; intensity: 1;"> 
+        <a-plane src="#card13" position="0 0 0" rotation="0 0 0" scale="3 3 3" alpha-test="1" opacity="1"></a-plane>
+      </a-entity>
+    </a-scene>
+
+    <a-scene mindar-image="imageTargetSrc: end5.mind;" color-space="sRGB" height="0.5" width="0.5" renderer="colorManagement: true; physicallyCorrectLights: true" vr-mode-ui="enabled: false" light="defaultLightsEnabled: false" device-orientation-permission-ui="enabled: false">
+      <a-assets>
+        <img id="card14" src="end5.png" />
+      </a-assets>
+
+      <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+      <a-entity mindar-image-target="targetIndex: 0" light="type: ambient; intensity: 1;"> 
+        <a-plane src="#card14" position="0 0 0" rotation="0 0 0" scale="3 3 3" alpha-test="1" opacity="1"></a-plane>
+      </a-entity>
+    </a-scene>
+
+    
   </body>
 </html>
